Try to improve Javadoc task as much as possible